HelloUltraviolet/Fixtures/RejectedSource/Expressions/FieldInitNamesAndSet/Source/Main.uv
//! Rejected record construction specimen for field initializer name sets.

public record FieldInitNamePayload {
    public first: i32
    public second: i32
}

public procedure fieldInitNamesAndSetReference() -> FieldInitNamePayload {
    return FieldInitNamePayload {
        first: 1,
        first: 2,
        second: 3
    }
}
